test/positive/nand.net
INPUT a, b
OUTPUT o1, o2, o3, o4
VAR a, b: 8, o1, o2: 8, o3: 8, o4: 5
IN
o1 = NAND a a
o2 = NAND b 0x0f
o3 = NAND 0x0f b
o4 = NAND 01101 0d42 : 5
