test/negative/missing_input_in_var_list.net
INPUT a
OUTPUT b
VAR b
IN
b = NOT a
